// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton renders logged in user status 1`] = `
<div
  className="auth-button-wrapper"
>
  <WithStyles(Tooltip)
    TransitionComponent={[Function]}
    TransitionProps={
      Object {
        "timeout": 300,
      }
    }
    placement="bottom-start"
  >
    <WithStyles(IconButton)
      className="log-out-button"
    >
      <pure(PersonIcon) />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</div>
`;

exports[`AuthButton renders logged out status 1`] = `
<div
  className="auth-button-wrapper"
>
  <WithStyles(Tooltip)
    TransitionComponent={[Function]}
    TransitionProps={
      Object {
        "timeout": 300,
      }
    }
    placement="bottom-start"
  >
    <WithStyles(IconButton)
      className="log-in-button"
    >
      <pure(PersonOutlineIcon) />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</div>
`;
